--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>💡 My App</title>
+  <title>Basic Carting App</title>
 </head>
 <body>
-  <h1>Welcome to my Application</h1>
+<div id="root"></div>
+<script type="module" src="./main.jsx"></script>
 </body>
 </html>
